[package]
name = "ina"
description = "Your resident M41D Unit, here to help with your server."
authors = ["Jaxydog"]
categories = ["command-line-utilities"]
keywords = ["bot", "discord"]

version = "0.1.0"
readme = "README.md"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[workspace]
members = ["lib/ina-*"]
resolver = "2"

package.edition = "2021"
package.license = "AGPL-3.0-or-later"
package.publish = false
package.repository = "https://github.com/ArchitecturalDogSoftware/1N4"

[workspace.lints]
clippy.allow_attributes = "warn"
clippy.cargo = "warn"
clippy.expect_used = "warn"
clippy.module_name_repetitions = { level = "allow", priority = 1 }
clippy.multiple_crate_versions = { level = "allow", priority = 1 }
clippy.nursery = "warn"
clippy.todo = "warn"
clippy.panic = "warn"
clippy.pedantic = "warn"
clippy.redundant_type_annotations = "warn"
clippy.undocumented_unsafe_blocks = "warn"
clippy.unwrap_used = { level = "deny", priority = 1 }
rust.missing_docs = "warn"
rust.unsafe_code = "deny"

[lints]
workspace = true

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
dotenvy = { version = "0.15", optional = true }
ina-localizing = { version = "*", path = "./lib/ina-localizing/" }
ina-logging = { version = "*", path = "./lib/ina-logging/" }
ina-macro = { version = "*", path = "./lib/ina-macro/" }
ina-threading = { version = "*", path = "./lib/ina-threading" }
ina-storage = { version = "*", path = "./lib/ina-storage", features = ["format-compression", "format-messagepack"] }
rand = { version = "0.8", features = ["nightly"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset", "serde"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
toml = { version = "0.8", features = ["preserve_order"] }
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight" }
twilight-http = { git = "https://github.com/twilight-rs/twilight" }
twilight-mention = { git = "https://github.com/twilight-rs/twilight" }
twilight-model = { git = "https://github.com/twilight-rs/twilight" }
twilight-util = { git = "https://github.com/twilight-rs/twilight", features = ["full"] }
