[package]
name = "ina"
description = "Your resident M41D Unit, here to help with your server."
authors = ["Jaxydog"]
categories = ["command-line-utilities"]
keywords = ["bot", "discord"]

version = "0.1.0"
readme = "README.md"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[workspace]
members = ["lib/ina-*"]
resolver = "2"

package.edition = "2024"
package.license = "AGPL-3.0-or-later"
package.publish = false
package.repository = "https://github.com/ArchitecturalDogSoftware/1N4"

[workspace.lints]
clippy.allow_attributes = "warn"
clippy.cargo = "warn"
clippy.expect_used = "warn"
clippy.module_name_repetitions = { level = "allow", priority = 1 }
clippy.multiple_crate_versions = { level = "allow", priority = 1 }
clippy.nursery = "warn"
clippy.todo = "warn"
clippy.panic = "warn"
clippy.pedantic = "warn"
clippy.redundant_type_annotations = "warn"
clippy.undocumented_unsafe_blocks = "warn"
clippy.unwrap_used = { level = "deny", priority = 1 }
rust.missing_docs = "warn"
rust.unsafe_code = "deny"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = "4.5"
ina-localizing = { version = "*", path = "./lib/ina-localizing/" }
ina-logging = { version = "*", path = "./lib/ina-logging/" }
ina-macro = { version = "*", path = "./lib/ina-macro/" }
ina-threading = { version = "*", path = "./lib/ina-threading" }
ina-storage = { version = "*", path = "./lib/ina-storage" }
serde = "1.0"
time = "0.3"
thiserror = "2.0"
tokio = "1.43"
toml = "0.8"

[lints]
workspace = true

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

[profile.release-super-optimized]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
clap = { workspace = true, features = ["cargo", "derive", "env"] }
directories = "6.0"
dotenvy = { version = "0.15", optional = true }
ina-localizing.workspace = true
ina-logging.workspace = true
ina-macro.workspace = true
ina-threading.workspace = true
ina-storage = { workspace = true, features = ["format-compression", "format-messagepack"] }
rand = { version = "0.9", default-features = false, features = ["nightly", "thread_rng"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
time = { workspace = true, features = ["local-offset", "serde"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
toml = { workspace = true, features = ["preserve_order"] }
twilight-cache-inmemory = "~0.16"
twilight-gateway = "~0.16"
twilight-http = "~0.16"
twilight-mention = "~0.16"
twilight-model = "~0.16"
twilight-util = { version = "~0.16", features = ["full"] }
twilight-validate = "~0.16"
