[package]
name = "ina"
description = "Your resident M41D Unit, here to help with your server."
authors = ["Jaxydog"]
categories = ["command-line-utilities"]
keywords = ["bot", "discord"]

version = "0.1.0"
readme = "README.md"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[workspace]
members = ["lib/ina-*"]
resolver = "3"

package.edition = "2024"
package.license = "AGPL-3.0-or-later"
package.publish = false
package.repository = "https://github.com/ArchitecturalDogSoftware/1N4"

[workspace.lints]
# Give better warnings for all Cargo manifests.
clippy.cargo = { level = "warn", priority = -1 }
# This is unavoidable with a project of this size.
clippy.multiple_crate_versions = "allow"

# Overly pedantic warnings are appreciated here.
clippy.pedantic = { level = "warn", priority = -1 }
# False positives seem to rarely occur with this enabled, and the lints are appreciated.
clippy.nursery = { level = "warn", priority = -1 }
# Helps avoid conflicting type names.
clippy.module_name_repetitions = "allow"
# Adding unnecessary type annotations tends to make code less readable IMO.
clippy.redundant_type_annotations = "warn"

# Prefer the usage of `#[expect]` attributes over `#[allow]`.
clippy.allow_attributes = "warn"
# Enforce the usage of attribute reasons.
clippy.allow_attributes_without_reason = "deny"

# Ensure all public items are documented.
rust.missing_docs = "warn"
# Ensure all private items are also documented.
clippy.missing_docs_in_private_items = "warn"

# Preferably avoid panics if at all possible.
clippy.expect_used = "warn"
# Explicitly panicking is slightly more okay, but still should be avoided.
clippy.panic = "warn"
# These should not be present unless the implementation is being worked on.
clippy.todo = "warn"
# Unwrap should not be used at all.
clippy.unwrap_used = "deny"

# Disallow the usage of unsafe.
rust.unsafe_code = "deny"
# Unsafe blocks *must* have safety comments, no exceptions.
clippy.undocumented_unsafe_blocks = "deny"

[workspace.dependencies]
anyhow = "~1.0"
async-trait = "~0.1"
clap = "~4.5"
ina-localizing = { version = "*", path = "./lib/ina-localizing/" }
ina-logging = { version = "*", path = "./lib/ina-logging/" }
ina-macro = { version = "*", path = "./lib/ina-macro/" }
ina-threading = { version = "*", path = "./lib/ina-threading/" }
ina-storage = { version = "*", path = "./lib/ina-storage/" }
serde = "~1.0"
time = "~0.3"
thiserror = "~2.0"
tokio = "~1.48"
toml = "~0.9"

[lints]
workspace = true

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

[profile.release-super-optimized]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
anyhow.workspace = true
async-stream = "~0.3"
async-trait.workspace = true
clap = { workspace = true, features = ["cargo", "derive", "env", "wrap_help"] }
directories = "~6.0"
dotenvy = { version = "~0.15", optional = true }
ina-localizing.workspace = true
ina-logging.workspace = true
ina-macro.workspace = true
ina-threading.workspace = true
ina-storage = { workspace = true, features = ["format-compression", "format-encryption", "format-messagepack"] }
rand = { version = "~0.9", default-features = false, features = ["nightly", "thread_rng"] }
rustls = { version = "~0.23", default-features = false, features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
time = { workspace = true, features = ["local-offset", "serde"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "~0.1"
toml = { workspace = true, features = ["preserve_order"] }
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight", branch = "next" }
twilight-http = { git = "https://github.com/twilight-rs/twilight", branch = "next" }
twilight-mention = { git = "https://github.com/twilight-rs/twilight", branch = "next" }
twilight-model = { git = "https://github.com/twilight-rs/twilight", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight", branch = "next", features = ["full"] }
twilight-validate = { git = "https://github.com/twilight-rs/twilight", branch = "next" }

[build-dependencies]
camino = "1.1.10"
license_page = { git = "https://github.com/RemasteredArch/license_page" }
