[package]
name = "ina-localizing"
description = "Provides localization solutions for 1N4."
authors = ["Jaxydog"]
categories = ["asynchronous", "internationalization", "localization"]
keywords = ["locale", "localizer", "translation"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
ina-logging = { version = "*", path = "../ina-logging/" }
ina-threading = { version = "*", path = "../ina-threading/" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["fs", "macros", "sync"] }
toml = "0.8"
