[package]
name = "ina-localizing"
description = "Provides localization solutions for 1N4."
authors = ["Jaxydog"]
categories = ["asynchronous", "internationalization", "localization"]
keywords = ["locale", "localizer", "translation"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
clap = { workspace = true, features = ["cargo", "derive", "env"] }
ina-logging.workspace = true
ina-threading.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "sync"] }
toml.workspace = true
