[package]
name = "ina-logging"
description = "Provides logging solutions for 1N4."
authors = ["Jaxydog"]
categories = ["asynchronous", "filesystem"]
keywords = ["logging", "output"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
ina-threading = { version = "*", path = "../ina-threading/" }
owo-colors = { version = "4.0", features = ["supports-colors"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt", "sync", "time"] }
