[package]
name = "ina-logging"
description = "Provides logging solutions for 1N4."
authors = ["Jaxydog"]
categories = ["asynchronous", "filesystem"]
keywords = ["logging", "output"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["file", "terminal"]
file = ["tokio/fs", "tokio/io-util"]
terminal = ["dep:owo-colors", "tokio/io-std", "tokio/io-util"]

[dependencies]
async-trait.workspace = true
clap = { workspace = true, features = ["cargo", "derive", "env"] }
ina-macro.workspace = true
ina-threading.workspace = true
owo-colors = { version = "~4.2", features = ["supports-colors"], optional = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["formatting", "local-offset", "macros"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }

[dev-dependencies]
# `macros` and `rt-multi-threaded` allow the use of the `#[tokio::main]` macro in documentation tests.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
