[package]
name = "ina-macro"
description = "Provides procedural macros for 1N4."
authors = ["Jaxydog"]
categories = ["rust-patterns"]
keywords = ["macro", "proc-macro"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
ina-storage = { workspace = true, features = ["format-compression", "format-messagepack"] }
serde.workspace = true
