[package]
name = "ina-storage"
description = "Provides data storage solutions for 1N4."
authors = ["Jaxydog"]
categories = ["database", "database-implementations", "filesystem"]
keywords = ["data", "storage"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
full = ["format-compression", "format-json", "format-messagepack", "format-postcard", "format-xmachina"]
format-compression = ["dep:flate2"]
format-json = ["dep:serde_json"]
format-messagepack = ["dep:rmp-serde"]
format-postcard = ["dep:postcard"]
format-xmachina = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
flate2 = { version = "1.0", optional = true }
ina-threading = { version = "*", path = "../ina-threading/" }
postcard = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"], optional = true }
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt", "sync", "time"] }
