[package]
name = "ina-storage"
description = "Provides data storage solutions for 1N4."
authors = ["Jaxydog"]
categories = ["database", "database-implementations", "filesystem"]
keywords = ["data", "storage"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["caching", "system-file", "system-memory"]
caching = []
format-compression = ["dep:flate2"]
format-encryption = ["dep:argon2", "dep:chacha20poly1305", "dep:zeroize"]
format-json = ["dep:serde_json"]
format-messagepack = ["dep:rmp-serde"]
format-postcard = ["dep:postcard"]
system-file = ["tokio/fs"]
system-memory = []
full = [
    "caching",
    "format-compression",
    "format-encryption",
    "format-json",
    "format-messagepack",
    "format-postcard",
    "system-file",
    "system-memory",
]

[dependencies]
argon2 = { version = "~0.5", optional = true }
anyhow.workspace = true
clap = { workspace = true, features = ["cargo", "derive", "env"] }
chacha20poly1305 = { version = "0.10", optional = true }
flate2 = { version = "1.0", optional = true }
ina-threading.workspace = true
postcard = { version = "1.1", optional = true }
rmp-serde = { version = "1.3", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"], optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
zeroize = { version = "~1.8", optional = true }
