[package]
name = "ina-threading"
description = "Provides concurrency solutions for 1N4."
authors = ["Jaxydog"]
categories = ["asynchronous", "concurrency"]
keywords = ["channels", "threads"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[dev-dependencies]
# `macros` and `rt-multi-threaded` allow the use of the `#[tokio::main]` macro in documentation tests.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
